         http://www.dusky.sk/zxs/; add ATA/ATAPI commands 0x21, 0x31, 0xA1.
20080319 ide.c: changes to allow DivIDE to support FATware from
         http://www.dusky.sk/zxs/; per-drive status and error registers, return
         0x00 when reading the command status register of a missing drive and
         advance LBA/CHS registers to next sector in seek() only if it is the
         last sector to read/write. 
20080319 ide.c: changes to allow DivIDE to support FATware from
         http://www.dusky.sk/zxs/; improved implementation of INITIALIZE
         DEVICE PARAMETERS command.
20080322 configure.in: add --without-libgcrypt option (Stuart).
20080401 libspectrum.h.in,tape.c,test/{edges.c,test.h,test15.c}: add support
	 for tape acceleration (patch #1880376).
20080409 szx.c: write 2 ROMs totalling 32k for Pentagon 128k and 3 ROMs
         totalling 48k for newer Pentagon models (Fred).
20080417 accessor.pl,doc/libspectrum.txt,snap_accessors.txt,snapshot.c,szx.c:
         add support for Kempston mouse for szx snapshots (Fred).
20080418 accessor.pl,doc/libspectrum.txt,snap_accessors.txt,snapshot.c,szx.c:
         add support for Simple 8-bit IDE interface for szx snapshots (Fred).
20080422 szx.c: don't bother with enabled flag for the Simple 8-bit IDE block
         on the suggestion of Jon Needle (Fred).
20080422 sna.c,z80.c: note info loss of Simple 8-bit IDE info when writing z80
         and sna format snapshots (Fred).
20080425 accessor.pl,doc/libspectrum.txt,internals.h,sna.c,snap_accessors.txt,
         snapshot.c,szx.c,z80.c: add support for DivIDE interface for szx
         snapshots (Fred).
20080522 sna.c: select the Pentagon 128 for 128k sna files (fixes bug #1958647)
         (Fred).
20080524 Makefile.am,configure.in,myglib/Makefile.am: don't use a libtool
         library as some operating systems (e.g. OpenSolaris) don't like the
         empty myglib.la we produce when glib proper is being used instead
         (Fred).