@@ -122,6 +122,7 @@ int main(void)
 "#define	TRUE	(!FALSE)\n"
 "#endif\n"
 "\n"
+"typedef char gchar;\n"
 "typedef int gint;\n"
 "typedef long glong;\n"
 "typedef gint gboolean;\n"
@@ -210,6 +211,25 @@ int main(void)
 "						 gpointer	 user_data);\n"
 "\n"
 "guint	WIN32_DLL g_hash_table_size (GHashTable	*hash_table);\n"
+"\n"
+"typedef struct _GArray GArray;\n"
+"\n"
+"struct _GArray {\n"
+"  /* Public */\n"
+"  gchar *data;\n"
+"  size_t len;\n"
+"\n"
+"  /* Private */\n"
+"  guint element_size;\n"
+"  size_t allocated;\n"
+"};\n"
+"\n"
+"GArray* g_array_new( gboolean zero_terminated, gboolean clear,\n"
+"		      guint element_size );\n"
+"#define g_array_append_val(a,v) g_array_append_vals( a, &(v), 1 );\n"
+"GArray* g_array_append_vals( GArray *array, gconstpointer data, guint len );\n"
+"#define g_array_index(a,t,i) (*(((t*)a->data)+i))\n"
+"GArray* g_array_set_size( GArray *array, guint length );\n"
 "\n" );
   if( sizeof( void* ) == sizeof( int ) ) {
     printf( "#define GINT_TO_POINTER(i)      ((gpointer)  (i))\n" );
